<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/ib_clip_cancel"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/pc_cancel"
            android:textColor="@color/pe_color_white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintStart_toEndOf="@+id/tv_clip_reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/tv_clip_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/pc_reset"
            android:focusable="true"
            android:includeFontPadding="false"
            android:onClick="onClick"
            android:src="@drawable/pe_btn_restart"
            android:textColor="@color/pe_color_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ib_clip_rotate"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintStart_toEndOf="@+id/ib_clip_cancel"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_clip_rotate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/pc_rotate"
            android:onClick="onClick"
            android:src="@drawable/pe_btn_rotate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ib_clip_done"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintStart_toEndOf="@+id/tv_clip_reset"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ib_clip_done"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:background="@drawable/pe_shape_btn"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/pc_confirm"
            android:textColor="#FFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.25"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
